langflow-kind.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: langflow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langflow
  namespace: langflow
  labels:
    app: langflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langflow
  template:
    metadata:
      labels:
        app: langflow
    spec:
      containers:
        - name: langflow
          image: docker.io/langflowai/langflow:latest
          ports:
            - containerPort: 7860
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: langflow
  namespace: langflow
  labels:
    app: langflow
spec:
  type: NodePort
  selector:
    app: langflow
  ports:
    - port: 7860
      targetPort: 7860
      nodePort: 30786
      protocol: TCP
